fix align-items

--- a/css/style.css
+++ b/css/style.css
@@ -205,7 +205,7 @@ a:hover {
 @media all and (max-width: 768px) {
   .header__nav {
     flex-direction: column;
-    align-items: start;
+    align-items: flex-start;
     width: fit-content;
     position: relative;
   }
